# M.A.R.S.

./: .editorconfig  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  Doxyfile  README.md  botnames.txt  credits.txt  license.txt  music-license.eml  premake4.lua  shipnames.txt
.github/workflows/: ci.yml
cmake/modules/: FindSFML.cmake
data/: botnames.txt  shipnames.txt
data/locales/: Arabic.txt  Chinese (simplified).txt  Chinese.txt  Czech.txt  Deutsch.txt  Dutch.txt  English.txt  Espanol.txt  Francais.txt  Gaelic.txt  Hindi.txt  Hungarian.txt  Italian.txt  Mongolian.txt  Norwegian.txt  Polish.txt  Portugues.txt  Russian.txt  Suomi.txt  Svenska.txt  Thai.txt  locales.conf
data/shaders/: base.vert  bloom.frag  blur.frag  bump.frag  flash.frag  sepia.frag  sepiaFlash.frag
data/tex/: icon.icns
data_src/: ball.xcf  cannon.xcf  cannonControl.xcf  countdown.blend  countdown.xcf  handles.blend  hud.blend  ice.xcf  icon.xcf  logo.xcf  marslogo.blend  planet.blend  planets.xcf  ships.xcf  sign.blend  signs.xcf  window.blend  window.xcf
include/: defines.hpp
include/Controllers/: AggroBot.hpp  BotController.hpp  CKBot.hpp  Controller.hpp  DMBot.hpp  DefBot.hpp  KeyController.hpp  MidBot.hpp  TutAggroBot.hpp  TutBot.hpp  controllers.hpp
include/DecoObjects/: Bolt.hpp  Cannon.hpp  DecoObject.hpp  Evil.hpp  Ice.hpp  PlanetSign.hpp  ShipHighlight.hpp  ShipName.hpp  SunHeat.hpp  decoObjects.hpp
include/Games/: CannonKeep.hpp  DeathMatch.hpp  Game.hpp  GraveItation.hpp  MenuGame.hpp  Rally.hpp  SpaceBall.hpp  TeamDeathMatch.hpp  Tutorial.hpp  games.hpp
include/Hud/: CountDown.hpp  GamePoints.hpp  GameStats.hpp  HudElement.hpp  LeftLife.hpp  Logo.hpp  Message.hpp  RightLife.hpp  TabStats.hpp  hud.hpp  musicNotify.hpp  numbers.hpp
include/Interface/: Button.hpp  Checkbox.hpp  ColorPicker.hpp  ComboBox.hpp  (+19 more)
po/: ar.po  cz.po  de.po  es.po  fi.po  fr.po  gd.po  hi.po  hu.po  it.po  marsshooter.pot  mn.po  nl.po  no.po  pl.po  pt.po  ru.po  sv.po  th.po  zh_CN.po
resources/: icon.icns  mars  mars.desktop  marsshooter.6  marsshooter.appdata.xml  marsshooter.desktop  marsshooter.xpm  resource.rc
src/: CMakeLists.txt  main.cpp
src/Controllers/: AggroBot.cpp  BotController.cpp  BotControllerActions.cpp  BotControllerBasicActions.cpp  BotControllerChecks.cpp  BotControllerDraw.cpp  BotControllerHelpers.cpp  BotControllerMovement.cpp  BotControllerTeamActions.cpp  CKBot.cpp  Controller.cpp  DMBot.cpp  DefBot.cpp  KeyController.cpp  TutAggroBot.cpp  TutBot.cpp  controllers.cpp
src/DecoObjects/: Bolt.cpp  Cannon.cpp  Evil.cpp  PlanetSign.cpp  ShipHighlight.cpp  ShipName.cpp  SunHeat.cpp  decoObjects.cpp
src/Games/: CannonKeep.cpp  DeathMatch.cpp  Game.cpp  GraveItation.cpp  MenuGame.cpp  Rally.cpp  SpaceBall.cpp  TeamDeathMatch.cpp  Tutorial.cpp  games.cpp
src/Hud/: CountDown.cpp  GamePoints.cpp  GameStats.cpp  LeftLife.cpp  Logo.cpp  Message.cpp  RightLife.cpp  TabStats.cpp  TabStats.cpp.mine  TabStats.cpp.r57  hud.cpp  musicNotify.cpp  numbers.cpp  numbers.cpp.mine  numbers.cpp.r52  numbers.cpp.r57
src/Interface/: Button.cpp  Checkbox.cpp  ColorPicker.cpp  ColorPickerWindow.cpp  ComboBox.cpp  DropDownWindow.cpp  KeyEdit.cpp  Label.cpp  LabeledBox.cpp  LanguageButton.cpp  Line.cpp  RadioButton.cpp  RadioGroup.cpp  ShipPreview.cpp  Slider.cpp  Tab.cpp  TabList.cpp  TextBox.cpp  TextEdit.cpp  UiElement.cpp  UiWindow.cpp  VerticalSlider.cpp  toolTip.cpp
src/Items/: CannonControl.cpp  Item.cpp  PUFuel.cpp  PUHealth.cpp  PUReverse.cpp  PUShield.cpp  PUSleep.cpp  PowerUp.cpp  items.cpp
src/Locales/: locales.cpp
src/Media/: announcer.cpp  file.cpp  font.cpp  music.cpp  sound.cpp  text.cpp  texture.cpp
src/Menu/: About.cpp  ChooseLanguage.cpp  Connect.cpp  EndMenu.cpp  EnterName.cpp  ExitConfirm.cpp  InfoCK.cpp  InfoDM.cpp  InfoGIP.cpp  InfoHide.cpp  InfoSB.cpp  InfoTDM.cpp  License.cpp  MainMenu.cpp  NewGameConfirm.cpp  NewGameMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  ShaderError.cpp  ToMainConfirm.cpp  TutorialWindow.cpp  WeaponOptions.cpp  menus.cpp
src/Particles/: AmmoAFK47.cpp  AmmoBurner.cpp  AmmoFist.cpp  AmmoFlubba.cpp  AmmoH2OMG.cpp  AmmoInsta.cpp  AmmoROFLE.cpp  AmmoRocket.cpp  AmmoShotgun.cpp  BurningFragment.cpp  CannonBall.cpp  CrushedIce.cpp  Dust.cpp  Eruption.cpp  Explode.cpp  Fragment.cpp  FragmentFlame.cpp  Fuel.cpp  Heat.cpp  HeatBurner.cpp  HeatJet.cpp  MiniAmmoFlubba.cpp  MiniFlame.cpp  MiniFlameSmoke.cpp  Mud.cpp  Number.cpp  PowerUpCollect.cpp  ShockWave.cpp  Smoke.cpp  Spark.cpp  Star.cpp  ammoAFK47s.cpp  ammoBurners.cpp  ammoFlubbas.cpp  ammoH2OMGs.cpp  ammoROFLEs.cpp  ammoShotguns.cpp  burningFragments.cpp  cannonBalls.cpp  dusts.cpp  (+15 more)
src/Players/: BotPlayer.cpp  LocalPlayer.cpp  Player.cpp  Team.cpp  players.cpp
src/Shaders/: postFX.cpp  shaders.cpp
src/SpaceObjects/: Ball.cpp  BlackHole.cpp  Home.cpp  Planet.cpp  Ship.cpp  Sun.cpp  Track.cpp  balls.cpp  physics.cpp  ships.cpp  spaceObjects.cpp  stars.cpp
src/Specials/: Blast.cpp  FireWall.cpp  Freezer.cpp  Heal.cpp  NoSpecial.cpp  RocketLauncher.cpp  Shocker.cpp  Special.cpp  specials.cpp
src/System/: Color3f.cpp  Key.cpp  Vector2f.cpp  generateName.cpp  keyNames.cpp  randomizer.cpp  settings.cpp  settings.cpp.mine  settings.cpp.r28  timer.cpp  window.cpp
src/Teams/: CKTeam.cpp  DMTeam.cpp  GITeam.cpp  SBTeam.cpp  TDMTeam.cpp  Team.cpp  TutTeam.cpp  teams.cpp
src/TrailEffects/: FloatingTrail.cpp  PersistantTrail.cpp  Trail.cpp  trailEffects.cpp
src/Tutorial/: TutWindow01.cpp  TutWindow02.cpp  TutWindow03.cpp  TutWindow04.cpp  TutWindow05.cpp  TutWindow06.cpp  TutWindow07.cpp  TutWindow08.cpp  TutWindow09.cpp  TutWindow10.cpp  TutWindow11.cpp  TutWindow12.cpp  TutWindow13.cpp  TutWindow14.cpp  TutWindow15.cpp  TutWindow16.cpp  TutWindow17.cpp  TutWindow18.cpp  TutWindow19.cpp  TutWindow20.cpp
src/Weapons/: AFK47.cpp  Burner.cpp  Fist.cpp  Flubba.cpp  H2OMG.cpp  Insta.cpp  ROFLE.cpp  RocketLauncher.cpp  Shotgun.cpp  Weapon.cpp  weapons.cpp
src/Zones/: HomeZone.cpp  RasterZone.cpp  TacticalZone.cpp  TeamZone.cpp  TutorialZone.cpp  zones.cpp
utils/: update_translations.sh
(+196 files in other folders)
